--- a/views/atividades.html
+++ b/views/atividades.html
@@ -60,7 +60,7 @@
                     <span class="material-icons-sharp">book</span>
                     <h3>Cursos</h3>
                 </a>
-                <a href="#">
+                <a href="atividades.html">
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
@@ -384,5 +384,6 @@
             </div>
         </section>
     </main>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
