--- a/views/cursos.html
+++ b/views/cursos.html
@@ -17,11 +17,11 @@
         <div class="nav-container">
             <div class="logo-area">
                 <img src="../img/logo.png" class="logo">
-                <h1>iEducar</h1>
+                <h1>ColaboraIFB</h1>
             </div>
 
             <div class="search-bar">
-                <input type="search" placeholder="Search">
+                <input type="search" placeholder="Buscar">
                 <span class="material-icons-sharp">search</span>
             </div>
 
@@ -84,7 +84,7 @@
                 <div class="course-card">
                     <div class="course-image">
                         <a href="rdc.html"><img src="../img/rdc.jpg" class="course"></a>
-                        <img src="../img/professor-rdc.jpg" class="course-professor">
+                        <img src="../img/professor-rdc.png" class="course-professor">
                         <h6 class="course-day">Segunda</h6>
                     </div>
                     <div class="course-content">
@@ -96,7 +96,7 @@
                 <div class="course-card">
                     <div class="course-image">
                         <a href="ldp.html"><img src="../img/ldp.jpg" class="course"></a>
-                        <img src="../img/professor-ldp.jpg" class="course-professor">
+                        <img src="../img/professor-ldp.png" class="course-professor">
                         <h6 class="course-day">Terça</h6>
                     </div>
                     <div class="course-content">
@@ -108,7 +108,7 @@
                 <div class="course-card">
                     <div class="course-image">
                         <a href="iac.html"><img src="../img/hardware.jpg" class="course"></a>
-                        <img src="../img/professor-hardware.jpg" class="course-professor">
+                        <img src="../img/professor-hardware.png" class="course-professor">
                         <h6 class="course-day">Quarta</h6>
                     </div>
                     <div class="course-content">
@@ -120,7 +120,7 @@
                 <div class="course-card">
                     <div class="course-image">
                         <a href="cpi.html"><img src="../img/cpi.jpg" class="course"></a>
-                        <img src="../img/professsor-cpi.jpg" class="course-professor">
+                        <img src="../img/professor-cpi.png" class="course-professor">
                         <h6 class="course-day">Quinta</h6>
                     </div>
                     <div class="course-content">
@@ -132,7 +132,7 @@
                 <div class="course-card">
                     <div class="course-image">
                         <a href="metodologia.html"><img src="../img/metodologia.jpg" class="course"></a>
-                        <img src="../img/professor-metodologia.jpg" class="course-professor">
+                        <img src="../img/professor-metodologia.png" class="course-professor">
                         <h6 class="course-day">Sexta</h6>
                     </div>
                     <div class="course-content">
