--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -49,7 +49,7 @@
         <!--MENU-->
         <aside>
             <div class="sidebar">
-                <a href="#">
+                <a href="dashboard.html">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
@@ -414,5 +414,6 @@
         </section>
     </main>
     <script src="../scripts/dashboard.js"></script>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
