--- a/views/externos.html
+++ b/views/externos.html
@@ -63,7 +63,7 @@
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
-                <a href="#">
+                <a href="externos.html">
                     <span class="material-icons-sharp">cast_for_education</span>
                     <h3>Externos</h3>
                 </a>
@@ -75,5 +75,6 @@
             </div>
         </aside>
     </main>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
