--- a/views/calendário.html
+++ b/views/calendário.html
@@ -51,7 +51,7 @@
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="calendário.html">
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
@@ -75,5 +75,6 @@
             </div>
         </aside>
     </main>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
