--- a/views/externos.html
+++ b/views/externos.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
+    <link rel="stylesheet" href="../styles/externos-style.css">
 </head>
 <body>
     <!--NAVIGATION-->
@@ -74,6 +75,27 @@
                 </a>
             </div>
         </aside>
+
+        <section id="middle">
+            <div class="external-card-container">
+                <div class="external-card">
+                    <img src="" alt="">
+                    <h3>NEAD</h3>
+                </div>
+                <div class="external-card">
+                    <img src="" alt="">
+                    <h3>PORTAL DO ESTUDANTE</h3>
+                </div>
+                <div class="external-card">
+                    <img src="" alt="">
+                    <h3>BIBLIOTECA</h3>
+                </div>
+                <div class="external-card">
+                    <img src="" alt="">
+                    <h3>E-MAIL</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="../scripts/menu.js"></script>
 </body>
