--- a/views/calendário.html
+++ b/views/calendário.html
@@ -16,7 +16,7 @@
         <div class="nav-container">
             <div class="logo-area">
                 <img src="../img/logo.png" class="logo">
-                <h1>iEducar</h1>
+                <h1>ColaboraIFB</h1>
             </div>
 
             <div class="search-bar">
