--- a/views/atividades.html
+++ b/views/atividades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="logo-area">
                 <img src="../img/logo.png" class="logo">
-                <h1>iEducar</h1>
+                <h1>ColaboraIFB</h1>
             </div>
 
             <div class="search-bar">
