--- a/views/externos.html
+++ b/views/externos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="logo-area">
                 <img src="../img/logo.png" class="logo">
-                <h1>iEducar</h1>
+                <h1>ColaboraIFB</h1>
             </div>
 
             <div class="search-bar">
@@ -76,27 +76,32 @@
             </div>
         </aside>
 
-        <section id="middle">
+        <!--EXTERNAL SYSTEMS-->
+        <section id="external-systems">
             <div class="external-card-container">
                 <div class="external-card">
-                    <img src="" alt="">
+                    <img src="../img/LogoNead.png" alt="">
                     <h3>NEAD</h3>
                 </div>
                 <div class="external-card">
-                    <img src="" alt="">
+                    <span class="material-icons-sharp">school</span>
                     <h3>PORTAL DO ESTUDANTE</h3>
                 </div>
                 <div class="external-card">
-                    <img src="" alt="">
+                    <span class="material-icons-sharp">menu_book</span>
                     <h3>BIBLIOTECA</h3>
                 </div>
                 <div class="external-card">
-                    <img src="" alt="">
+                    <span class="material-icons-sharp">mail_outline</span>
                     <h3>E-MAIL</h3>
                 </div>
+            </div>
+            <div class="footer">
+                <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
             </div>
         </section>
     </main>
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/external.js"></script>
 </body>
 </html>
