--- a/views/externos.html
+++ b/views/externos.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="search-bar">
-                <input type="search" placeholder="Search">
+                <input type="search" placeholder="Buscar">
                 <span class="material-icons-sharp">search</span>
             </div>
 
@@ -81,23 +81,25 @@
             <div class="external-card-container">
                 <div class="external-card">
                     <img src="../img/LogoNead.png" alt="">
-                    <h3>NEAD</h3>
+                    <h3>Nead</h3>
                 </div>
                 <div class="external-card">
                     <span class="material-icons-sharp">school</span>
-                    <h3>PORTAL DO ESTUDANTE</h3>
+                    <h3>Portal do Estudante</h3>
                 </div>
                 <div class="external-card">
                     <span class="material-icons-sharp">menu_book</span>
-                    <h3>BIBLIOTECA</h3>
+                    <h3>Biblioteca</h3>
                 </div>
                 <div class="external-card">
                     <span class="material-icons-sharp">mail_outline</span>
-                    <h3>E-MAIL</h3>
+                    <h3>E-mail</h3>
                 </div>
             </div>
             <div class="footer">
-                <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                <a href="https://github.com/GeovaniSS">
+                    <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                </a>
             </div>
         </section>
     </main>
