--- a/views/rdc.html
+++ b/views/rdc.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
+    <link rel="stylesheet" href="../styles/rdc-style.css">
 </head>
 <body>
      <!--NAVIGATION-->
@@ -16,11 +17,11 @@
         <div class="nav-container">
             <div class="logo-area">
                 <img src="../img/logo.png" class="logo">
-                <h1>iEducar</h1>
+                <h1>ColaboraIFB</h1>
             </div>
 
             <div class="search-bar">
-                <input type="search" placeholder="Search">
+                <input type="search" placeholder="Buscar">
                 <span class="material-icons-sharp">search</span>
             </div>
 
@@ -74,8 +75,220 @@
                 </a>
             </div>
         </aside>
+
+        <section id="course-details">
+            <div id="course-header">
+                <span class="material-icons-sharp">arrow_back</span>
+                <h2>Curso</h2>
+                <h1>Redes de Computadores</h1>
+            </div>
+            <div class="external-card-container">
+                <div class="external-card">
+                    <div class="card-icon">
+                        <span class="material-icons-sharp">book</span>
+                    </div>
+                    <div class="card-content">
+                        <h5>ACESSAR</h5>
+                        <h4>Nead - IFB</h4>
+                    </div>
+                </div>
+
+                <div class="external-card">
+                    <div class="card-icon">
+                        <span class="material-icons-sharp">school</span>
+                    </div>
+                    <div class="card-content">
+                        <h5>ACESSAR</h5>
+                        <h4>Portal</h4>
+                    </div>
+                </div>
+
+                <div class="external-card">
+                    <div class="card-icon">
+                        <span class="material-icons-sharp">local_library</span>
+                    </div>
+                    <div class="card-content">
+                        <h5>ACESSAR</h5>
+                        <h4>Biblioteca</h4>
+                    </div>
+                </div>
+
+                
+                <div class="external-card">
+                    <div class="card-icon">
+                        <span class="material-icons-sharp">mail_outline</span>
+                    </div>
+                    <div class="card-content">
+                        <h5>ACESSAR</h5>
+                        <h4>Email - IFB</h4>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+            <section id="center">
+                <div class="class-table-container">
+                    <table>
+                        <thead>
+                            <tr class="task-title">
+                                <th>VIDEOAULA</th>
+                                <th>TIPO</th>
+                                <th>DATA</th>
+                                <th>PRESENÇA</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+    
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+    
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>06/02/22</h5>
+                                </td>
+                                <td class="task-delivery">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <aside class="next-tasks">
+
+                </aside>
+            </section>
+        </section>
     </main>
 
-
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
