--- a/views/calendário.html
+++ b/views/calendário.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="search-bar">
-                <input type="search" placeholder="Search">
+                <input type="search" placeholder="Buscar">
                 <span class="material-icons-sharp">search</span>
             </div>
 
