--- a/views/externos.html
+++ b/views/externos.html
@@ -96,11 +96,11 @@
                     <h3>E-mail</h3>
                 </div>
             </div>
-            <div class="footer">
+            <footer>
                 <a href="https://github.com/GeovaniSS">
                     <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                 </a>
-            </div>
+            </footer>
         </section>
     </main>
     <script src="../scripts/menu.js"></script>
