--- a/views/cursos.html
+++ b/views/cursos.html
@@ -141,6 +141,11 @@
                     </div>
                 </div>
             </div>
+            <footer>
+                <a href="https://github.com/GeovaniSS">
+                    <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                </a>
+            </footer>
         </section>
     </main>
     <script src="../scripts/menu.js"></script>
