--- a/views/atividades.html
+++ b/views/atividades.html
@@ -382,6 +382,11 @@
                     </tbody>
                 </table>
             </div>
+            <footer>
+                <a href="https://github.com/GeovaniSS">
+                    <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                </a>
+            </footer>
         </section>
     </main>
     <script src="../scripts/menu.js"></script>
