--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -350,6 +350,12 @@
                     </tbody>
                 </table>
             </div>
+            <!-- FOOTER -->
+            <footer>
+                <a href="https://github.com/GeovaniSS">
+                    <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                </a>
+            </footer>
         </section>
 
         <section id="right">
