--- a/views/rdc.html
+++ b/views/rdc.html
@@ -282,17 +282,29 @@
                         </tbody>
                     </table>
                 </div>
-                <aside class="next-tasks">
+                <div class="next-tasks">
                     <div class="next-tasks-header">
                         <h3>Próximas <br> Atividades</h3>
                         <img src="../img/tasks.png" alt="">
                     </div>
-                    <div class="next-tasks-content">
-                        <h5>20 de Dezembro</h5>
-                        <h4>Exame dos Módulos 8-10</h4>
-                        <span id="task-color">Atividade</span>
+                    <div class="next-tasks-container">
+                        <div class="next-tasks-content">
+                            <h5>20 de Dezembro</h5>
+                            <h4>Exame dos Módulos 8-10</h4>
+                            <span id="task-color">Atividade</span>
+                        </div>
+                        <div class="next-tasks-content">
+                            <h5>20 de Dezembro</h5>
+                            <h4>Exame dos Módulos 8-10</h4>
+                            <span id="task-color">Atividade</span>
+                        </div>
+                        <div class="next-tasks-content">
+                            <h5>20 de Dezembro</h5>
+                            <h4>Exame dos Módulos 8-10</h4>
+                            <span id="task-color">Atividade</span>
+                        </div>
                     </div>
-                </aside>
+                </div>
             </section>
         </section>
     </main>
